# pymonster

./: .gitignore  README.md  pyproject.toml
docs/: Informationen_zum_Game.md  Kurze doku zu Beast und ndArray.qmd  anforderungsanalyse.qmd
pymonster/: Biest_Pseudo.txt  beast_module.py  calculate_next_step.py  client.py  config.py  enemy_module.py  game_state_manager_module.py  utils.py
tests/: Abgabe2_Testfälle.txt  test_beast.py  test_beast_strategy.py  test_enemy.py  test_game_state_manager.py  tests_.py
